[package]
name = "config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.derive_more]
version = "0.99.16"
default-features = false
features = ["constructor"]

[dependencies.derive-new]
version = "0.5.9"

[dependencies.auto_impl]
version = "0.4.1"

[dependencies.thiserror]
version = "1.0.30"

[dependencies.convert_case]
version = "0.4.0"

[dependencies.impls]
version = "1.0.3"

